--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,14 +1,14 @@
 :root {
-  --accent-color: #ff6b09;
+  --orange: #ff6b09;
   // --icon-color:;
 
-  --title-text-color: #111518;
+  --blackr: #111518;
   // --secondary-background-color:;
 
-  --primary-text-color: #b9b9b9;
+  --grey: #b9b9b9;
   // --section-background-color:;
 
-  --white-text-color: #ffffff;
+  --white: #ffffff;
   // --primary-background-color: ;
   // --border-color:;
 
