--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,16 +1,4 @@
-:root {
-  --orange: #ff6b09;
-  // --icon-color:;
-
-  --blackr: #111518;
-  // --secondary-background-color:;
-
-  --grey: #b9b9b9;
-  // --section-background-color:;
-
-  --white: #ffffff;
-  // --primary-background-color: ;
-  // --border-color:;
-
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+$orange: #ff6b09;
+$black: #111518;
+$grey: #b9b9b9;
+$white: #ffffff;
