--- a/src/partials/how.html
+++ b/src/partials/how.html
@@ -9,9 +9,11 @@
         <ul class="how-we-do-it-list">
 
             <li class="how-we-do-it-item">
-                <svg class="hwd-list-svg" width="45" height="48">
-                    <use href="E:\GitHub\parcel-project-template-itcats\src\images\icon\sprite.svg#noun-audio-book">
+                <div class="hwd-icon">
+                <svg width="45" height="48">
+                    <use href="./images/icon/sprite.svg#noun-study-program">
                 </svg>
+                </div>
                 <h3 class="how-we-do-it-list-title">Адаптированная программа подготовки к ВНО</h3>
                 <p class="how-we-do-it-list-text">
                     Ты будешь изучать грамматику и лексику одновременно. И ты научишься писать сочинения.
@@ -20,7 +22,11 @@
             </li>
 
             <li class="how-we-do-it-item">
-                <!--<svg></svg>-->
+                <div class="hwd-icon">
+                    <svg width="48" height="47">
+                        <use href="./images/icon/sprite.svg#noun-mobile-learning">
+                    </svg>
+                </div>
                 <h3 class="how-we-do-it-list-title">Аудитория и <br>онлайн-обучение</h3>
                 <p class="how-we-do-it-list-text">
                     Учитель поможет не только в аудитории, но и во время домашней подготовки.
@@ -29,7 +35,11 @@
             </li>
 
             <li class="how-we-do-it-item">
-                <!--<svg></svg>-->
+                <div class="hwd-icon">
+                    <svg width="68" height="48">
+                        <use href="./images/icon/sprite.svg#noun-open-book">
+                    </svg>
+                </div>
                 <h3 class="how-we-do-it-list-title">Привычка читать на английском языке</h3>
                 <p class="how-we-do-it-list-text">
                     Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон дважды в неделю.
@@ -37,7 +47,11 @@
             </li>
 
             <li class="how-we-do-it-item">
-                <!--<svg></svg>-->
+                <div class="hwd-icon">
+                    <svg width="48" height="48">
+                        <use href="./images/icon/sprite.svg#noun-psihilogic-support">
+                    </svg>
+                </div>
                 <h3 class="how-we-do-it-list-title">Психологическая <br>поддержка</h3>
                 <p class="how-we-do-it-list-text">
                     Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности
@@ -46,7 +60,11 @@
             </li>
 
             <li class="how-we-do-it-item">
-                <!--<svg></svg>-->
+                <div class="hwd-icon">
+                    <svg width="39" height="48">
+                        <use href="./images/icon/sprite.svg#noun-female-student">
+                    </svg>
+                </div>
                 <h3 class="how-we-do-it-list-title">Обучение по авторским пособиям</h3>
                 <p class="how-we-do-it-list-text">
                     Тебе не нужно тратить время
@@ -56,7 +74,11 @@
             </li>
 
             <li class="how-we-do-it-item">
-                <!--<svg></svg>-->
+                <div class="hwd-icon">
+                    <svg width="57" height="48">
+                        <use href="./images/icon/sprite.svg#noun-audio-book">
+                    </svg>
+                </div>
                 <h3 class="how-we-do-it-list-title">Умение воспринимать устную английскую речь</h3>
                 <p class="how-we-do-it-list-text">
                     “F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать
