--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -3,21 +3,24 @@
   padding-bottom: 50px;
 }
 
-.hwd-list-svg {
-  fill: $orange;
-}
-
 .how-we-do-it-title {
   margin-bottom: 30px;
   font-family: $font;
   text-align: center;
 }
 
+.hwd-icon {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
 .how-we-do-it-item {
   width: 280px;
   height: 280px;
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
-  padding: 30px 25px 25px 25px;
+  padding: 30px 12px 0px 12px;
+  margin-bottom: 15px;
 }
 
 .how-we-do-it-item:hover,
@@ -38,7 +41,6 @@
   line-height: 20px;
   text-align: center;
   letter-spacing: 0.08em;
-  margin-bottom: 35px;
 }
 
 .how-we-do-it-list-text {
@@ -49,4 +51,16 @@
   color: $light-font;
   text-align: center;
   letter-spacing: 0.08em;
+}
+
+.site-nav .link.current::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 4px;
+
+  background-color: var(--accent-color);
 }
