--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -128,4 +128,45 @@
       </li>
     </ul>
   </div>
+
+  <div class="program__why-section">
+    <p class="program__why-headline">Почему нас выбирают</p>
+    <ul class="program__why-list">
+      <li class="program__why-item">
+        <p class="program__why-title">01</p>
+        <p class="program__why-description">Обучение в малых командах</p>
+      </li>
+
+      <li class="program__why-item">
+        <p class="program__why-title">02</p>
+        <p class="program__why-description">Визуализированные конспекты</p>
+      </li>
+
+      <li class="program__why-item">
+        <p class="program__why-title">03</p>
+        <p class="program__why-description">
+          Каждое занятие имеет цель и конкретный результат
+        </p>
+      </li>
+
+      <li class="program__why-item">
+        <p class="program__why-title">04</p>
+        <p class="program__why-description">
+          Ревльные результаты преподавателя
+        </p>
+      </li>
+
+      <li class="program__why-item">
+        <p class="program__why-title">05</p>
+        <p class="program__why-description">
+          Прогамма курса соответствует требованиям МОН Украины
+        </p>
+      </li>
+
+      <li class="program__why-item">
+        <p class="program__why-title">06</p>
+        <p class="program__why-description">Набор команд по уровням знаний</p>
+      </li>
+    </ul>
+  </div>
 </div>
