--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -94,10 +94,12 @@ img {
 }
 
 .program {
+  position: relative;
   padding: 50px 20px;
+  padding-bottom: 537px;
   background-color: var(--primary-text-color);
   color: var(--white-text-color);
-  overflow: hidden;
+  margin-bottom: 270px;
 }
 .program__title {
   text-align: center;
@@ -111,14 +113,14 @@ img {
   display: flex;
   align-items: start;
   width: 280px;
+  overflow: hidden;
   margin-left: auto;
   margin-right: auto;
 }
 .program__items {
   display: block;
   min-width: 176px;
-  margin-left: 100px;
-  margin-bottom: 537px;
+  margin-left: auto;
 }
 .program__items::before {
   content: "";
@@ -127,27 +129,8 @@ img {
   height: 1320px;
   position: absolute;
   top: 15px;
-  left: 74px;
+  left: 78px;
   background-color: var(--white-text-color);
-}
-.program__items::after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 180px;
-  bottom: 440px;
-  width: 176px;
-  height: 137px;
-  background-image: url("../images/program/program-mobile-1.jpg");
-  background-size: contain;
-  background-position: top left;
-  background-repeat: no-repeat;
-  opacity: 0.5;
-}
-@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-  .program__items::after {
-    background-image: url("../images/program/program-mobile-1@2x.jpg");
-  }
 }
 .program__headline {
   position: relative;
@@ -209,4 +192,83 @@ img {
 }
 .program__section:not(:last-child) {
   margin-bottom: 8px;
+}
+.program__why-section {
+  position: absolute;
+  width: 280px;
+  top: 1605px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+.program__why-headline {
+  position: relative;
+  display: flex;
+  width: 180px;
+  align-items: flex-end;
+  font-family: var(--primary-font-family);
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.36;
+  letter-spacing: 0.03em;
+  color: var(--white-text-color);
+  margin-bottom: 30px;
+}
+.program__why-headline::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 180px;
+  bottom: 0;
+  width: 120px;
+  height: 137px;
+  background-image: url("../images/program/program-mobile-1.jpg");
+  background-size: contain;
+  background-position: top left;
+  background-repeat: no-repeat;
+  opacity: 0.5;
+}
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .program__why-headline::after {
+    background-image: url("../images/program/program-mobile-1@2x.jpg");
+  }
+}
+.program__why-list {
+  color: var(--additional-bg-color);
+  background-color: var(--white-text-color);
+  padding: 20px 30px;
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+}
+.program__why-title {
+  display: flex;
+  align-items: center;
+  font-family: var(--primary-font-family);
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.649;
+  letter-spacing: 0.08em;
+  color: var(--accent-color);
+}
+.program__why-title::before {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 12px;
+  background-color: var(--accent-color);
+  margin-right: 6px;
+}
+.program__why-title:not(:last-child) {
+  margin-bottom: 10px;
+}
+.program__why-description {
+  font-family: Montserrat;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 1.43;
+  letter-spacing: 0.08em;
+  color: var(--additional-bg-color);
+}
+.program__why-description:not(:last-child) {
+  margin-bottom: 20px;
 }/*# sourceMappingURL=main.css.map */
