--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -51,16 +51,14 @@
   color: $light-font;
   text-align: center;
   letter-spacing: 0.08em;
+  margin-top: 15px;
 }
 
-.site-nav .link.current::after {
+.how-we-do-it-list-title::after {
   content: '';
   display: block;
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  width: 100%;
-  height: 4px;
-
-  background-color: var(--accent-color);
+  width: 20px;
+  height: 2px;
+  background-color: $orange;
+  margin: 1rem auto 0;
 }
