версія для планшетів

--- a/src/sass/layout/_program-section.scss
+++ b/src/sass/layout/_program-section.scss
@@ -1,6 +1,6 @@
-// *{
-//     outline: solid 1px red;
-// }
+*{
+    outline: solid 1px red;
+}
 .program-section{
     background-color: #111518;
     padding-top: 50px;
@@ -25,7 +25,6 @@
 
 .choose-section .title{
     padding-bottom: 30px;
-    width: 180px;
 }
 
 .program-list-semester{
@@ -114,43 +113,10 @@
     
 }
 
-@media screen and (max-width: 767px){
-   
-    .program-section .container{
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    
-
-    .choose-section{
-        margin-top: 50px;
-       position: absolute;
-       top: 1522px;
-    
-    }
-
-    .choose-wrapper{
-        margin-right: auto;
-        margin-left: auto;
-        // margin-right: 20px;
-        // margin-left: 20px;
-        width: 280px;
-        padding: 20px 30px;
-        background: #FFFFFF;
-        box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-        
-
-    }
-
-    .title-wrapper{
-        background-color:var(--title-text-color);
-    }
-
+.title-wrapper{
+    background-color:var(--title-text-color);
 }
 
-
-// ---------------- Секция почему нас выбирают-----------------
 .choose-list-item{
     font-family: Montserrat;
     font-weight: bold;
@@ -159,10 +125,187 @@
     align-items: center;
     letter-spacing: 0.08em;
     color: var(--accent-color); 
-
-    margin-bottom: 20px;
-    
+  
 }
+
+.choose-section{
+   position: absolute;
+}
+
+.choose-wrapper{
+    margin-right: auto;
+    margin-left: auto;
+    background: #FFFFFF;
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+    
+
+}
+
+
+@media screen and (max-width: 767px){
+   
+    .program-section .container{
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .choose-section{
+        margin-top: 50px;
+       top: 1522px;
+    
+    }
+
+    .choose-list-item:not(:last-child){
+        margin-bottom: 20px;
+    }
+
+   
+    .choose-section .title{
+        width: 180px;
+    }
+    
+
+    
+
+    .choose-wrapper{
+        width: 280px;
+        padding: 20px 30px;
+    }
+
+   
+
+}
+//------------------------------------768------------------
+@media screen and (min-width: 768px){
+    .program-section{
+        padding-top: 60px;
+        padding-bottom: 392px;
+    }
+
+    .title{
+        font-size: 26px;
+        line-height: 1.3;
+    }
+
+    // .title-wrapper{
+    //     width: 688px;
+    //     margin-left: auto;
+    //     margin-right: auto;
+    // }
+
+    .program-section .title{
+        margin-bottom: 52px;
+        text-align: left;
+       
+    }
+    
+    .choose-section .title{
+        padding-bottom: 30px;
+        text-align: center;
+    }
+
+    // .choose-section .container{
+    //     padding-right: ;
+    //     // padding-left: 0;
+    // }
+
+    .program-list{
+        margin-left: 119px;
+    }
+
+    .method-list{
+        display: flex;
+    }
+
+//------------------ Вирівнюю по вертикалі
+    .method-list-item:not(:last-child){
+        margin-right: 50px;
+    }
+
+    // .method-list .one{
+    //     margin-right: 86px;
+    // }
+    // .method-list .two,{
+    //     margin-right: 132px;
+    // }
+
+    // .method-list .three{
+    //     margin-right: 129px; 
+    // }
+
+    // .method-list .three-vocabluary{
+    //     margin-right: 59px; 
+    // }
+
+
+    .topic-list-item{
+        width: 176px;
+
+        &:not(:last-child){
+            margin-bottom: 3px;
+        }
+    }
+    //--------------------------------
+
+    .program-list::before{
+        content: " ";
+        // display: inline-block;
+        height: 717px;
+        width: 1px;
+        background:  #FFFFFF ;
+        position: absolute;
+        margin-right: 20px;
+    
+        top: 155px;
+        left: 88px;
+    }
+
+    .program-list-item:not(:last-child){
+        margin-bottom: 30px;
+     }
+
+     .choose-wrapper{
+        width: 688px;
+        padding-top: 30px;
+        padding-bottom: 25px;
+        padding-left: 98px;
+        padding-right: 118px;
+    } 
+
+    .choose-list{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .choose-list-item{
+        // width: 226px;
+        width: calc((100% - 20px * 1) / 2);
+
+        &:nth-child(2n + 1){
+            margin-right: 20px;
+        }
+
+        &:nth-child(-n + 4){
+            margin-bottom: 30px;
+        }
+    }
+
+    .choose-section{
+        margin-top: 50px;
+       position: absolute;
+       top: 1152px;
+    
+    }
+    
+
+}
+
+
+
+
+
+// ---------------- Секция почему нас выбирают-----------------
+
 
 .choose-list-text{
     font-family: Montserrat;
