adds pseudo hover

--- a/src/partials/how.html
+++ b/src/partials/how.html
@@ -10,7 +10,7 @@
 
             <li class="how-we-do-it-item">
                 <div class="hwd-icon">
-                <svg width="45" height="48">
+                <svg class="hwd-svg" width="45" height="48">
                     <use href="./images/icon/sprite.svg#noun-study-program">
                 </svg>
                 </div>
