--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -62,3 +62,8 @@
   background-color: $orange;
   margin: 1rem auto 0;
 }
+
+.how-we-do-it-item:hover .how-we-do-it-list-title::after,
+.how-we-do-it-item:focus .how-we-do-it-list-title::after {
+  background-color: $white-font;
+}
