убрал х3 картинки, импорт картинок х1, х2

--- a/src/partials/our-program.html
+++ b/src/partials/our-program.html
@@ -7,27 +7,37 @@
         семестр
         <dl>
           <dt class="our-program__item-title">Grammar</dt>
-          <dd class="our-program__item-subtitle">Nouns & Articles<br>Adjectives & Adverb</dd>
+          <dd class="our-program__item-subtitle">
+            Nouns & Articles<br />Adjectives & Adverb
+          </dd>
           <dt class="our-program__item-title">Vocabulary</dt>
-          <dd class="our-program__item-subtitle">Family & Relations<br>People & Society</dd>
+          <dd class="our-program__item-subtitle">
+            Family & Relations<br />People & Society
+          </dd>
         </dl>
       </li>
       <li class="our-program__item">
         семестр
         <dl>
           <dt class="our-program__item-title">Grammar</dt>
-          <dd class="our-program__item-subtitle">Pronouns<br>Active Voice<br>Passive Voice</dd>
+          <dd class="our-program__item-subtitle">
+            Pronouns<br />Active Voice<br />Passive Voice
+          </dd>
           <dt class="our-program__item-title">Vocabulary</dt>
-          <dd class="our-program__item-subtitle">Home<br>School<br>Work</dd>
+          <dd class="our-program__item-subtitle">Home<br />School<br />Work</dd>
         </dl>
       </li>
       <li class="our-program__item">
         семестр
         <dl>
           <dt class="our-program__item-title">Grammar</dt>
-          <dd class="our-program__item-subtitle">Modal verbs<br>Infinitive<br>Gerund<br>Participle: 1, 2</dd>
+          <dd class="our-program__item-subtitle">
+            Modal verbs<br />Infinitive<br />Gerund<br />Participle: 1, 2
+          </dd>
           <dt class="our-program__item-title">Vocabulary</dt>
-          <dd class="our-program__item-subtitle">Travel & Tourism<br>Culture & Free Time<br>Sport</dd>
+          <dd class="our-program__item-subtitle">
+            Travel & Tourism<br />Culture & Free Time<br />Sport
+          </dd>
           <dt class="our-program__item-title">Writing</dt>
           <dd class="our-program__item-subtitle">Informal Letter</dd>
         </dl>
@@ -37,10 +47,13 @@
         <dl>
           <dt class="our-program__item-title">Grammar</dt>
           <dd class="our-program__item-subtitle">
-            Clauses: Conditional and<br>Wishes<br>Direct / Reported speech<br>Preposition<br>Conjunction<br>Numeral
+            Clauses: Conditional and<br />Wishes<br />Direct / Reported
+            speech<br />Preposition<br />Conjunction<br />Numeral
           </dd>
           <dt class="our-program__item-title">Vocabulary</dt>
-          <dd class="our-program__item-subtitle">Healthy Living<br>Nature & Environment<br>Money</dd>
+          <dd class="our-program__item-subtitle">
+            Healthy Living<br />Nature & Environment<br />Money
+          </dd>
           <dt class="our-program__item-title">Writing</dt>
           <dd class="our-program__item-subtitle">Formal Letter</dd>
         </dl>
@@ -49,11 +62,66 @@
         семестр
         <dl>
           <dt class="our-program__item-title"></dt>
-          <dd class="our-program__item-subtitle">Revision<br>Tests</dd>
+          <dd class="our-program__item-subtitle">Revision<br />Tests</dd>
         </dl>
       </li>
     </ol>
-  
+
+    <!-- <picture>
+      <source
+        srcset="
+          ../images/our-program-desktop.webp    1x,
+          ../images/our-program-desktop@2x.webp 2x
+        "
+        media="(min-width: 1200px)"
+        type="image/webp"
+      />
+      <source
+        srcset="
+          ../images/our-program-desktop.png    1x,
+          ../images/our-program-desktop@2x.png 2x
+        "
+        media="(min-width: 1200px)"
+        type="image/png"
+      />
+      <source
+        srcset="
+          ../images/our-program-tablet.webp    1x,
+          ../images/our-program-tablet@2x.webp 2x
+        "
+        media="(min-width: 768px)"
+        type="image/webp"
+      />
+      <source
+        srcset="
+          ../images/our-program-tablet.png    1x,
+          ../images/our-program-tablet@2x.png 2x
+        "
+        media="(min-width: 768px)"
+        type="image/png"
+      />
+      <source
+        srcset="
+          ../images/our-program-mobile.webp    1x,
+          ../images/our-program-mobile@2x.webp 2x
+        "
+        media="(min-width: 320px)"
+        type="image/webp"
+      />
+      <source
+        srcset="
+          ../images/our-program-mobile.png    1x,
+          ../images/our-program-mobile@2x.png 2x
+        "
+        media="(min-width: 320px)"
+        type="image/png"
+      />
+      <img
+        src="../images/our-program-desktop.png"
+        alt="преподаватель проверяет учеников в классе"
+      />
+    </picture> -->
+
     <h2 class="choice__section-title">Почему нас выбирают</h2>
   
     <dl class="choice__list">
@@ -67,10 +135,10 @@
         <dd class="choice__descr">Каждое занятие имеет цель и конкретный результат</dd>
       </dt>
       <dt class="choice__item">
-        <dd class="choice__descr">Ревльные результаты преподавателя</dd>
+        <dd class="choice__descr">Реальные результаты преподавателя</dd>
       </dt>
       <dt class="choice__item">
-        <dd class="choice__descr">Прогамма курса соответствует требованиям МОН Украины</dd>
+        <dd class="choice__descr">Программа курса соответствует требованиям МОН Украины</dd>
       </dt>
       <dt class="choice__item">
         <dd class="choice__descr">Набор команд по уровням знаний</dd>
