--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,8 +4,12 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './layout/header';
 @import './example';
+// ==============LAYOUT============
+@import './layout/header';
+// ==============BASE==============
 @import './base/common';
+@import './base/container';
+// ==============UTILS=============
 @import './utils/hidden-title';
 @import './utils/variables';
