--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,27 +1,170 @@
-.logo {
-  font-style: normal;
-  font-weight: 800;
-  font-size: 26px;
-  line-height: 32px;
-  letter-spacing: 0.04em;
+// .header {
+//   display: flex;
+//   justify-content: space-around;
+// }
+// ==============NAV==============
+// .nav_list {
+//   display: flex;
 
-  color: #111518;
+//   .nav_list-item + .nav_list-item {
+//     margin-left: 40px;
+//   }
+//   .nav_list-item .nav_link {
+//     display: inline-block;
+//     padding-top: 61px;
+//     color: var(--secondary-text-color);
+//   }
+//   font-style: normal;
+//   font-weight: 70;
+//   font-size: 14px;
+//   line-height: 1.2;
+//   text-transform: uppercase;
 
-  .logo_svg {
-    margin-left: 4px;
-    margin-right: 4px;
+//   &:hover,
+//   &:focus {
+//     color: var(--accent-color);
+//   }
+// }
+// ==============LOGO============
+// .logo {
+//   display: flex;
+//   flex-direction: column;
+// }
+// .logo_link {
+//   display: flex;
+//   align-items: flex-start;
+//   padding-top: 45px;
+
+//   font-style: normal;
+//   font-weight: 800;
+//   font-size: 26px;
+//   line-height: 1.2;
+//   letter-spacing: 0.04em;
+
+//   color: var(--title-text-color);
+
+//   .logo_svg {
+//     margin-left: 4px;
+//     margin-right: 4px;
+//   }
+// }
+// .logo_text {
+//   font-family: Montserrat;
+//   font-style: normal;
+//   font-weight: 700;
+//   font-size: 8px;
+//   line-height: 10px;
+
+//   letter-spacing: 0.18em;
+//   text-transform: uppercase;
+
+//   color: var(--title-text-color);
+//   .logo_accent {
+//     color: var(--accent-color);
+//   }
+// }
+// ================BUTTON==============
+// .header_button {
+//   margin-top: 35px;
+
+//   background-color: transparent;
+//   color: var(--accent-color);
+//   border: 2px var(--accent-color) solid;
+//   padding: 27px 23px 26px 24px;
+// }
+
+@media screen and(min-width: 320px) {
+  .header {
+    position: relative;
   }
-}
-.logo_text {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 8px;
-  line-height: 10px;
+  .logo {
+    position: absolute;
+    top: 33px;
+    left: 20px;
 
-  letter-spacing: 0.18em;
-  text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+    z-index: 999999999;
+  }
+  .logo_link {
+    display: flex;
+    align-items: flex-start;
 
-  .logo_accent {
-    color: var(--accent-color);
+    font-style: normal;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+
+    color: var(--title-text-color);
+
+    .logo_svg {
+      margin-left: 4px;
+      margin-right: 4px;
+    }
+  }
+  .logo_text {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 8px;
+    line-height: 10px;
+
+    letter-spacing: 0.18em;
+    text-transform: uppercase;
+
+    color: var(--title-text-color);
+    .logo_accent {
+      color: var(--accent-color);
+    }
+  }
+  .nav_list {
+    display: none;
+  }
+  .header_button {
+    display: none;
+  }
+  .nav_menu-btn .icon-cross {
+    display: none;
+  }
+  .nav_menu-btn.is-open .icon-cross {
+    display: block;
+  }
+  .nav_menu-btn.is-open .icon-menu {
+    display: none;
+  }
+  .nav_menu-btn {
+    position: absolute;
+    z-index: 9999999999;
+    top: 37px;
+    right: 20px;
+
+    outline: none;
+    cursor: pointer;
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
+
+    color: #ffffff;
+    &:hover,
+    &:focus {
+      fill: var(--accent-color);
+    }
+  }
+  .menu {
+    display: none;
+
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+
+    z-index: 9999;
+
+    background: rgba(17, 21, 24, 0.9);
+
+    &.is-open {
+      display: block;
+      height: 453px;
+    }
   }
 }
