--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -71,3 +71,41 @@
 .how-we-do-it-item:last-child {
   margin-bottom: 0px;
 }
+/*--------------------------------------------------------*/
+@media screen and (max-width: 767px) {
+  .how-we-do-it-item {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .how-we-do-it-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+
+  .how-we-do-it-item {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .works-list__description-wrapper.card1 {
+    padding-bottom: 56px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .works {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
+  .how-we-do-it-item {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+  }
+}
