--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,14 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+// base
+@import './base/common';
 
-// Стили для файла с примером HTML-фрагмента
-@import './example';
+// components
+@import './components/logo';
+
+// layout
+@import './layout/footer';
+@import './layout/header';
+@import './layout/hero';
+
+// utils
+@import './utils/container';
+@import './utils/variables';
