--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -19,6 +19,13 @@
                 </svg>
             </div>
         </a>
+        <button type="button" class="menu" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+            <svg width="20" height="20" aria-label="переключатель мобильного меню">
+                <use class="header-cross" href="./images/sprite.svg#header-cross"></use>
+                <use class="header-menu" href="./images/sprite.svg#header-menu"></use>
+            </svg>
+        </button>
+        <div class="menu-nav"></div>
         </nav>
     </div>
 </header>
