--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -1,3 +1,35 @@
 .h-navigation {
   padding: 30px 0;
+
+  display: flex;
+
+  align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .menu {
+    display: inline-flex;
+    justify-content: center;
+    margin-left: auto;
+    border: none;
+    background-color: transparent;
+    fill: black;
+    stroke: currentColor;
+  }
+
+  .menu .header-cross {
+    display: none;
+  }
+
+  .menu.is-open .header-cross {
+    display: block;
+  }
+  .menu.is-open .header-menu {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu {
+    display: none;
+  }
 }
