Добавляет финальную разметку секций Hero и Advantages

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,22 +3,24 @@
     <ul class="advantages-list">
         <li class="advantages-list__item">
             <svg class="advantages-list__icon">
-                <use href='./images/icons/sprite.svg#icon-mobile_learning'></use>
+                <use href="./images/icons/sprite.svg#icon-female_student"></use>
             </svg>
             <p class="advantages-list__disc">Адаптированная авторская
                 программа ВНО</p>
         </li>
         <li class="advantages-list__item">
             <svg class="advantages-list__icon">
-                <use ></use>
+                <use href="./images/icons/sprite.svg#icon-mobile_learning" width='100%'></use>
             </svg>
-            <p class="advantages-list__disc"></p>
+            <p class="advantages-list__disc">Современные
+            методики обучения</p>
         </li>
         <li class="advantages-list__item">
             <svg class="advantages-list__icon">
-                <use ></use>
+                <use href="./images/icons/sprite.svg#icon-insurance"></use>
             </svg>
-            <p class="advantages-list__disc"></p>
+            <p class="advantages-list__disc">Финансовая гарантия
+            результата</p>
         </li>
     </ul>
 </div>
