--- a/src/partials/registration-form.html
+++ b/src/partials/registration-form.html
@@ -1,17 +1,19 @@
-<section class="registration-form container">
-    <div>
-        <p class="registration-form-description">Регистрация на <span class="registration-form-accent">бесплатную</span>
-            телефонную <span class="registration-form-accent">консультацию</span> по нюансам ЗНО
-            по английскому языку</p>
-        <p class="registration-form-description">Оставь заявку на участие в <span
-                class="registration-form-accent">бесплатном занятии</span>.<br>
-            С вами свяжется консультант и ответит на вопросы</p>
+<section class="registration-form">
+    <div class="container">
+        <div>
+            <p class="registration-form-description">Регистрация на <span class="registration-form-accent">бесплатную</span>
+                телефонную <span class="registration-form-accent">консультацию</span> по нюансам ЗНО
+                по английскому языку</p>
+            <p class="registration-form-description">Оставь заявку на участие в <span
+                    class="registration-form-accent">бесплатном занятии</span>.<br>
+                С вами свяжется консультант и ответит на вопросы</p>
+        </div>
+        <label class="registration-form-field">
+            <input class="registration-form-input" type="text" placeholder="Имя*">
+        </label>
+        <label class="registration-form-field">
+            <input class="registration-form-input" type="text" placeholder="Телефон*">
+        </label>
+        <button class="registration-form-btn" type="submit">хочу на бесплатное занятие</button>
     </div>
-    <label class="registration-form-field">
-        <input class="registration-form-input" type="text" placeholder="Имя*">
-    </label>
-    <label class="registration-form-field">
-        <input class="registration-form-input" type="text" placeholder="Телефон*">
-    </label>
-    <button class="registration-form-btn" type="submit">хочу на бесплатное занятие</button>
 </section>
