--- a/src/sass/layouts/_registration-form.scss
+++ b/src/sass/layouts/_registration-form.scss
@@ -3,9 +3,12 @@
   padding-bottom: 50px;
   text-align: center;
   width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #111518;
   background-image: url('./../images/registration-form/mobile-form.png');
-  background-size: 320px 507px;
+  // background-size: 320px 507px;
+  margin: 0 auto;
 }
 .registration-form-btn {
   @extend %orange-btn;
@@ -61,14 +64,14 @@
 }
 @media screen and (min-width: 768px) {
   .registration-form {
-    background-color: #111518;
+    // background-color: #111518;
     background-image: url('./../images/registration-form/tablet-form.png');
-    background-size: 768px 520px;
+    // background-size: 768px 520px;
     padding-bottom: 71px;
   }
-  @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-    screen and (min-resolution: 192dpi) and (min-width: 768px),
-    screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
     .registration-form {
       background-image: url('./../images/registration-form/tablet-form@2x.png');
     }
@@ -85,5 +88,68 @@
   }
   .registration-form-btn {
     margin-top: 12px;
+  }
+  .registration-form-input {
+    width: 390px;
+  }
+}
+@media screen and (min-width: 1314px) {
+  .registration-form {
+    background-image: url('./../images/registration-form/desktop-form.png');
+    // height: 840px;
+    padding-top: 100px;
+    padding-bottom: 62px;
+    background-position: center;
+  }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .registration-form {
+      background-image: url('./../images/registration-form/desktop-form@2x.png');
+    }
+  }
+  .registration-form-description {
+    font-size: 46px;
+    width: 1090px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+
+    &:last-child {
+      font-size: 30px;
+      line-height: 1.23;
+      margin-bottom: 56px;
+    }
+  }
+  .registration-form-input {
+    width: 478px;
+    height: 70px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+
+    &::placeholder {
+      font-size: 20px;
+      line-height: 24px;
+    }
+  }
+  .registration-form-btn {
+    font-size: 14px;
+    letter-spacing: 0.14em;
+    line-height: 1.21;
+    margin-top: 80px;
+    padding: 27px 23px 26px 24px;
+    color: $white-font;
+    border: 2px solid $orange;
+    background-color: $orange;
+    transition: all $transSet;
+    &:hover,
+    &:focus,
+    &:active {
+      color: $orange;
+      background-color: #ffffff;
+      cursor: pointer;
+    }
   }
 }
