--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,3 +8,6 @@
 @import './base/common';
 @import './utils/hidden-title';
 @import './utils/variables';
+@import './base/container';
+
+@import './teacher';
