--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -1,19 +1,66 @@
-<section>
-    <div>
-        <h2>Преподаватель</h2>
-        <img src="./images/teacher/img-tablet-mobile.jpg" alt="">
-        <h3>Елена Морева</h3>
-        <ul>
-            <li>Опыт подготовки учеников к ВНО - 6 лет</li>
-            <li>Собственный результат сдачи ВНО - 197 баллов 2 года подряд</li>
-            <li>Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English Test)</li>
-        </ul>
-        <p>Высшее образование получила в Институте международных отношений НАУ по специальности переводчик-аналитик.</p>
-        <p>В свободное время проходит курсы от лучших университетов мира по эффективному преподаванию и методикам написания
-        сочинений.</p>
-        <p>В числе пройденных: English Grammar and Essay Writing (Berkeley), English Grammar&Style (The University of Queesland),
-        How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching (GEMS education),
-        Powerful Tools for Teaching and Learning (University of Houston).</p>
-        <a href="">Cambrige English Entry Level Certificate</a>
+<section class="teacher">
+    <div class="teacher-container container">
+        <div class="teacher-left-side">
+            <h2 class="teacher-title">Преподаватель</h2>
+            <picture class="teacher-picture">
+                <source srcset="./images/teacher/img.webp 1x, ./images/teacher/img@2x.webp 2x" media="(min-width: 1344px)"
+                    type="image/webp">
+                <source srcset="./images/teacher/img.jpg 1x, ./images/teacher/img@2x.jpg 2x" media="(min-width: 1344px)">
+                <source srcset="./images/teacher/img-tablet-mobile.webp 1x, ./images/teacher/img-tablet-mobile@2x.webp 2x"
+                    media="(min-width: 320px)" type="image/webp">
+                <source srcset="./images/teacher/img-tablet-mobile.jpg 1x, ./images/teacher/img-tablet-mobile@2x.jpg 2x"
+                    media="(min-width: 320px)">
+                <img class="teacher-img" src="./images/teacher/img-tablet-mobile.jpg" alt="фото преподавателя по пояс">
+            </picture>
+        </div>
+        <div class="teacher-right-side">
+            <h3 class="teacher-subtitle">Елена Морева</h3>
+            <ul class="teacher-list">
+                <li class="teacher-list-item">
+                    <svg class="teacher-list-icon">
+                        <use href="./images/sprite.svg#icon-chek-mark"></use>
+                    </svg>
+                    <p class="teacher-list-text">Опыт подготовки учеников к ВНО - 6 лет</p>
+                </li>
+                <li class="teacher-list-item">
+                    <svg class="teacher-list-icon">
+                        <use href="./images/sprite.svg#icon-chek-mark"></use>
+                    </svg>
+                    <p class="teacher-list-text">Собственный результат сдачи ВНО - 197 баллов 2 года подряд</p>
+                </li>
+                <li class="teacher-list-item">
+                    <svg class="teacher-list-icon">
+                        <use href="./images/sprite.svg#icon-chek-mark"></use>
+                    </svg>
+                    <p class="teacher-list-text">Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English
+                        Test)</p>
+                </li>
+            </ul>
+            <!-- <ul>
+                        <li>
+                            <p>Высшее образование получила в Институте международных отношений НАУ по специальности переводчик-аналитик.</p>
+                        </li>
+                        <li>
+                            <p>В свободное время проходит курсы от лучших университетов мира по эффективному преподаванию
+                                и методикам написания сочинений.</p>
+                        </li>
+                        <li>
+                            <p>В числе пройденных: English Grammar and Essay Writing (Berkeley), English Grammar&Style (The University of
+                            Queesland),
+                            How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching (GEMS education),
+                            Powerful Tools for Teaching and Learning (University of Houston).</p>
+                        </li>
+                    </ul> -->
+            <p class="teacher-desc">Высшее образование получила в Институте международных отношений НАУ по специальности
+                переводчик-аналитик.</p>
+            <p class="teacher-desc">В свободное время проходит курсы от лучших университетов мира по эффективному преподаванию и
+                методикам написания
+                сочинений.</p>
+            <p class="teacher-desc">В числе пройденных: English Grammar and Essay Writing (Berkeley), English Grammar&Style (The
+                University of Queesland),
+                How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching (GEMS education),
+                Powerful Tools for Teaching and Learning (University of Houston).</p>
+            <a class="teacher-link" href="">Cambrige English Entry Level Certificate</a>
+        </div>
     </div>
 </section>
