--- a/src/partials/how.html
+++ b/src/partials/how.html
@@ -14,7 +14,7 @@
                     <use href="./images/icon/sprite.svg#noun-study-program">
                 </svg>
                 </div>
-                <h3 class="how-we-do-it-list-title">Адаптированная программа подготовки к ВНО</h3>
+                <h3 class="how-we-do-it-list-title">Адаптированная программа <br>подготовки к ВНО</h3>
                 <p class="how-we-do-it-list-text">
                     Ты будешь изучать грамматику и лексику одновременно. И ты научишься писать сочинения.
                 </p>
@@ -40,7 +40,7 @@
                         <use href="./images/icon/sprite.svg#noun-open-book">
                     </svg>
                 </div>
-                <h3 class="how-we-do-it-list-title">Привычка читать на английском языке</h3>
+                <h3 class="how-we-do-it-list-title">Привычка читать на <br>английском языке</h3>
                 <p class="how-we-do-it-list-text">
                     Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон дважды в неделю.
                 </p>
@@ -65,7 +65,7 @@
                         <use href="./images/icon/sprite.svg#noun-female-student">
                     </svg>
                 </div>
-                <h3 class="how-we-do-it-list-title">Обучение по авторским пособиям</h3>
+                <h3 class="how-we-do-it-list-title">Обучение по авторским <br>пособиям</h3>
                 <p class="how-we-do-it-list-text">
                     Тебе не нужно тратить время
                     на самостоятельный поиск материала и ничего покупать дополнительно. Мы составили
@@ -79,7 +79,7 @@
                         <use href="./images/icon/sprite.svg#noun-audio-book">
                     </svg>
                 </div>
-                <h3 class="how-we-do-it-list-title">Умение воспринимать устную английскую речь</h3>
+                <h3 class="how-we-do-it-list-title">Умение воспринимать устную <br>английскую речь</h3>
                 <p class="how-we-do-it-list-text">
                     “F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать
                     и разбирать аудиозаписи
