--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -19,7 +19,8 @@
   width: 280px;
   height: 280px;
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
-  padding: 30px 12px 0px 12px;
+  padding: 30px 5px 30px 5px;
+
   margin-bottom: 15px;
 }
 
@@ -49,7 +50,7 @@
   width: 20px;
   height: 2px;
   background-color: $orange;
-  margin: 1rem auto 0;
+  margin: 15px auto 15px;
 }
 
 .how-we-do-it-item:hover,
@@ -75,7 +76,7 @@
 @media screen and (max-width: 767px) {
   .how-we-do-it-item {
     &:not(:last-child) {
-      margin-bottom: 30px;
+      margin-bottom: 15px;
     }
   }
 }
@@ -89,20 +90,31 @@
 
   .how-we-do-it-item {
     flex-basis: calc((100% - 2 * 30px) / 2);
-    margin: 15px;
+    margin-bottom: 28px;
+    margin-right: 20px;
+    width: 334px;
+    height: 334px;
+    padding: 40px 22px 30px 22px;
+  }
+  .hwd-icon {
+    margin-bottom: 30px;
+  }
+
+  .how-we-do-it-list-title::after {
+    margin: 25px auto 25px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .works-list__description-wrapper.card1 {
-    padding-bottom: 56px;
+  .how-we-do-it-item {
+    /*padding-bottom: 56px;*/
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .works {
-    padding-top: 94px;
-    padding-bottom: 94px;
+  .how-we-do-it-item {
+    padding-top: 40px;
+    padding-bottom: 55px;
   }
 
   .how-we-do-it-item {
