--- a/src/sass/layout/_benefits.scss
+++ b/src/sass/layout/_benefits.scss
@@ -88,8 +88,14 @@
     height: 560px;
     padding-top: 100px;
   }
+
+  .benefits-list {
+    width: 1314px;
+    column-count: 3;
+  }
   .benefits-title {
     font-size: 46px;
     line-height: 1.304;
+    margin-bottom: 70px;
   }
 }
