header done for all devices

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,6 +18,7 @@
 // COMPONENTS
 @import './components/logo';
 @import './components/button';
+@import './components/section-title';
 
 // LAYOUT
 @import './layout/header';
