--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -30,9 +30,9 @@ img {
     padding: 0 40px;
   }
 }
-@media screen and (min-width: 1314px) {
+@media screen and (min-width: 1344px) {
   .container {
-    max-width: 1314px;
-    // padding: 0 183px;
+    max-width: 1344px;
+    padding: 0 15px;
   }
 }
