Обновляет контейнер десктопа

--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -30,9 +30,9 @@ img {
     padding: 0 40px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1314px) {
   .container {
-    max-width: 1200px;
-    padding: 0 183px;
+    max-width: 1314px;
+    padding: 0;
   }
 }
