--- a/src/partials/choose.html
+++ b/src/partials/choose.html
@@ -1,3 +1,5 @@
+<section class="green">greeen</section>
+
 <section class="choose">
     <h2 class="choose-title">Почему нас выбирают</h2>
     <ol class="choose-list">
